--- a/resources/assets/css/compiler.css
+++ b/resources/assets/css/compiler.css
@@ -120,7 +120,7 @@ body {
 }
 .main-header .navbar-top {
   width: 100%;
-  background: antiquewhite;
+  background: #F2F5FA;
 }
 .main-header .nav-page {
   padding: 0px 45px;
@@ -442,7 +442,7 @@ body {
 }
 
 .main-sidebar ul li .active span{
-  /* font-family: Inter; */
+  font-family: 'inter_semibold', sans-serif !important;
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
@@ -2335,8 +2335,7 @@ input[switch]:checked + .c-switch-label:after {
   }
 }
 .select2 {
-  /* width: 100% !important; */
-  /* border: 1px solid #A0BDFF !important; */
+  margin-bottom: 10px;
   border-radius: 5px !important;
 }
 
