--- a/resources/assets/css/compiler.css
+++ b/resources/assets/css/compiler.css
@@ -210,7 +210,9 @@ body {
 .main-header .search {
   float: right;
   height: 60px;
-  padding: 25px;
+  padding-top: 18px;
+  padding-right: 25px;
+  display: flex;
 }
 .main-header .search input {
   width: 125px;
@@ -2356,10 +2358,10 @@ input[switch]:checked + .c-switch-label:after {
   border-color: #80A9FF !important;
 }
 
-.dropdown {
+/* .dropdown {
   width: 100%;
   height: 28px;
-}
+} */
 
 .chart-normal {
   min-height: 190px;
