--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -423,11 +423,11 @@
 
 .dropzone-wrapper {
     position: relative;
-    height: 150px;
-    width: 150px;
-    border: 2px solid #E0E0E0;
+    height: 165px;
+    width: 100%;
+    background: #E8F7EE;
+    border-radius: 4px;
     box-sizing: border-box;
-    border-radius: 6px;
     overflow: hidden;
 }
 .dropzone-desc {
@@ -437,20 +437,21 @@
     right: 0;
     text-align: center;
     /* width: 40%; */
-    top: 50px;
+    top: 30px;
     font-size: 16px;
 }
 .dropzone-desc img {
-    width: 23px;
+    /* width: 23px; */
     height: auto;
 }
 .dropzone-desc p {
-    font-weight: 500;
-    font-size: 12px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
     line-height: 130%;
-    color: #828282;
-    margin-bottom: 0px;
-    margin-top: 8px;
+    letter-spacing: -0.02em;
+    color: #BDBDBD;
+    margin-top: .5rem;
 }
 .dropzone,
 .dropzone:focus {
@@ -2320,6 +2321,14 @@ n.otif-modal .notify-drop-title{
     to {right: 0; opacity: 0;}
 }
 
+.input-title-news h4 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #333333;
+}
 .input-title-news input {
     border: none;
     font-style: normal;
@@ -3186,4 +3195,13 @@ and (max-device-width: 1024px)  {
     border-radius: 7px;
     padding: 12px 0px 12px 14px;
     margin: 1px;
+}
+
+.label-req-bottom {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #050401;
 }
