animasi css, notif modal

--- a/resources/assets/css/candidate-style.css
+++ b/resources/assets/css/candidate-style.css
@@ -43,6 +43,9 @@ label.error {
 .goToRegister {
     cursor: pointer;
 }
+.thisIconEye {
+    cursor: pointer;
+}
 
 .candidate-page-title {
     font-family: 'inter_bold', sans-serif;
