--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1134,6 +1134,9 @@ ul.thumbnails.image_picker_selector li .thumbnail {
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.border-green.active {
     border-bottom: 2px solid #27AE60 !important;
 }
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.border-red.active {
+    border-bottom: 4px solid #DF0E2C !important;
+}
 
 .nav-tabs .nav-link {
     border: 0px solid transparent;
@@ -3204,4 +3207,128 @@ and (max-device-width: 1024px)  {
     line-height: 130%;
     letter-spacing: -0.02em;
     color: #050401;
+}
+
+
+/* Card question bank */
+.card-question {
+    background: #FFFFFF;
+    border-radius: 10px;
+    margin: 20px 0px;
+}
+.card-question .head {
+    padding: 2.5rem 2.5rem 1rem 2.5rem;
+}
+.card-question .tab-pane .body {
+    padding: 1rem 2.5rem 2.5rem 2.5rem;
+}
+.card-question .nav-tabs li:first-child {
+    margin-left: 2.5rem;
+}
+.card-question .nav-tabs li:last-child {
+    margin-right: 2.5rem;
+}
+.accordion-question-bank .card-accordion-head {
+    margin: 1rem 0px;
+    /* display: flex;
+    align-items: center;
+    justify-content: space-between; */
+    cursor: pointer;
+    position: relative;
+}
+/* down f078 */
+/* up f077 */
+.accordion-question-bank .card-accordion-head::after {
+    font-family: "Font Awesome 5 Free";
+    content: "\f078";
+    color: #333;
+    top: 0px;
+    right: 0px;
+    position: absolute;
+}
+.accordion-question-bank .card-accordion-head h4 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+}
+/* .accordion-question-bank .card-accordion-head i {
+    font-size: 22px;
+    color: #DF0E2C;
+} */
+.accordion-question-bank .card-question-inside {
+    background: #FFFFFF;
+    border: 1px solid #E0E0E0;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 1.2rem 1.1rem;
+    margin: .7rem 0px;
+    transition: box-shadow .5s, border .8s;
+}
+.accordion-question-bank .card-question-inside:hover {
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);
+    border: 1px solid #FFFFFF;
+}
+.accordion-question-bank .card-question-inside h5 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #050401;
+}
+.accordion-question-bank .card-question-inside button {
+    border: none;
+    background-color: transparent;
+    color: #BDBDBD;
+}
+.accordion-question-bank .card-question-inside button i {
+    font-size: 17px;
+}
+.accordion-question-bank .card-question-inside .content-question {
+    /* height: 36px;
+    overflow: hidden;
+    text-overflow: ellipsis; */
+    margin-top: .7rem;
+}
+.accordion-question-bank .card-question-inside .content-question p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 140%;
+    letter-spacing: 0.02em;
+    color: #4F4F4F;
+    margin-bottom: 0px;
+
+    text-overflow: ellipsis;
+    height: 40px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.accordion-question-bank .card-question-inside .dropdown-menu-question {
+    background: #FFFFFF;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    min-width: 7rem;
+}
+.accordion-question-bank .card-question-inside .dropdown-menu-question .dropdown-item {
+    display: flex;
+    align-items: center;
+    padding: .25rem .75rem;
+}
+.accordion-question-bank .card-question-inside .dropdown-menu-question .dropdown-item p {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    margin-left: .5rem;
+}
+.accordion-question-bank .card-question-inside .dropdown-menu-question .dropdown-item p.edit {
+    color: #DFAE2E;
+}
+.accordion-question-bank .card-question-inside .dropdown-menu-question .dropdown-item p.delete {
+    color: #DF0E2C;
 }
