--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,34 @@
+.btn-file {
+    position: relative;
+    overflow: hidden;
+
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 130%;
+    text-align: right;
+    letter-spacing: -0.02em;
+    color: #DF0E2C;
+    cursor: pointer;
+}
+.btn-file:hover {
+    color: #e23e56;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;   
+    cursor: inherit;
+    display: block;
+}
+
 .input-linkedin{
     border: none;
     font-family: 'inter_bold', sans-serif !important;
@@ -7,6 +38,65 @@
     line-height: 130%;
     letter-spacing: -0.02em;
     color: #050401;
+}
+
+.btn-white {
+    background: #FFFFFF;
+    border: 1px solid #BDBDBD;
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    color: #DF0E2C;
+    padding: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn-white:hover {
+    background: #ececec;
+    color: #DF0E2C;
+}
+
+.text-info{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.02em;
+    color: #4F4F4F !important;
+}
+
+.btn-answer{
+    width: 41px;
+    height: 41px;
+    background: #E3E6FF;
+    border-radius: 10px;
+    border: none;
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 150%;
+    text-align: center;
+    color: #414141;
+}
+
+.btn-answer:focus{
+    box-shadow: none;
+    outline-width: 0;
+}
+
+.btn-answer-active{
+    background: #DF0E2C !important;
+    border: 2px solid #DF0E2C !important;
+    box-sizing: border-box !important;
+    color: #E8F7EE !important;
 }
 
 .input-linkedin:focus{
@@ -1770,7 +1860,7 @@ ul.thumbnails.image_picker_selector li .thumbnail {
 }
 
 .error{
-    color: red;
+    color: red !important;
 }
 
 .hidden{
