--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,99 @@
+.btn-delete-alternatif{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    display: flex;
+    align-items: center;
+    color: #050401;
+}
+
+.title-alternatif{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.02em;
+    color: #828282;
+    margin-bottom: 5px;
+}
+
+.content-alternatif{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    display: flex;
+    align-items: center;
+    letter-spacing: -0.02em;
+    color: #050401;
+
+}
+
+.modal-for-notif {
+    max-width: 415px;
+}
+.modal-for-notif .modal-content {
+    background: #FFFFFF;
+    box-shadow: 50px 50px 100px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.modal-for-notif .modal-content .modal-body {
+    padding: 2.1rem 1.8rem;
+}
+.modal-for-notif .modal-icon-notif .ilustrasi {
+    width: 65px;
+    height: 65px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgb(0 0 0 / 15%);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+.modal-for-notif .modal-content-notif p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #4F4F4F;
+}
+
+.modal-for-notif .modal-content-notif a {
+    padding-top: 14px;
+}
+
+.modal-for-notif .modal-content-notif .modal-page-subtitle {
+    font-family: 'inter_bold', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #333333;
+}
+/* .modal-for-notif .modal-content-notif p a {
+    text-decoration: none;
+    font-weight: 700;
+    color: #4F4F4F;
+} */
+
+.row-location{
+    margin-bottom: 50px;
+}
+
+.dropdown-divider {
+    margin: 0px;
+    border-top: 1px solid #BDBDBD;
+}
+
 .badge-question {
     background: #E8F7EE;
     border: 2px solid #888888;
