--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,46 @@
+.test-pass{
+    color: #050401;
+}
+
+.test-fail{
+    color: #7a7975;
+}
+
+.title-result{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #828282;
+}
+
+.value-result{
+    font-family: 'inter_bold', sans-serif !important;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #050401;
+}
+
+.grafik-result{
+    width: 100%;
+    height: 100%;
+}
+
+.table-result td{
+	border: none !important;
+	vertical-align: inherit !important;
+	/* text-align: center; */
+}
+
+.table-result .green{
+    background: #EDFCF3;
+}
+
 .span-reschedule{
     font-weight: bold;
 }
