--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,57 @@
+.custome-radio-wrapper {
+    display: block;
+    position: relative;
+    padding-left: 30px;
+    padding-top: 3px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    color: #333333;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.custome-radio-wrapper input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+.custome-radio-wrapper .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 23px;
+    width: 23px;
+    background-color: #E0E0E0;
+    border-radius: 50%;
+}
+.custome-radio-wrapper .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.custome-radio-wrapper:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+.custome-radio-wrapper input:checked ~ .checkmark {
+    background-color: #DF0E2C;
+}
+.custome-radio-wrapper input:checked ~ .checkmark:after {
+    display: block;
+}
+.custome-radio-wrapper .checkmark:after {
+    top: 6.5px;
+    left: 6.5px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: white;
+}
+
 .test-pass{
     color: #050401;
 }
